--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -37,15 +37,15 @@
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.svg"
+      href="../assets/images/favicon.svg"
       type="image/svg"
     />
 
     <!-- ===== All CSS files ===== -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/animate.css" />
-    <link rel="stylesheet" href="assets/css/lineicons.css" />
-    <link rel="stylesheet" href="assets/css/ud-styles.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/animate.css" />
+    <link rel="stylesheet" href="../assets/css/lineicons.css" />
+    <link rel="stylesheet" href="../assets/css/ud-styles.css" />
   </head>
   <body>
     <!-- ====== Header Start ====== -->
@@ -55,7 +55,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo/logo.svg" alt="Logo" />
+                <img src="../assets/images/logo/logo.svg" alt="Logo" />
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -137,9 +137,18 @@
     </header>
     <!-- ====== Header End ====== -->
 
+    <section id="features" class="ud-features">
+      <div class="container">
+        <h1>Hello World</h1>
+        <% products.map((product)=>{ %>
+          <h4><%=product.productTitle %></h4>
+          <p><%=product.productDescription %></p>
+          <p>ราคา : <%=product.productPrice %> บาท</p>
+        <%})%>
+      </div>
+    </section>
 
 
-    
     <!-- ====== Footer Start ====== -->
     <footer class="ud-footer wow fadeInUp" data-wow-delay=".15s">
       <div class="shape shape-1">
@@ -382,9 +391,9 @@
     <!-- ====== Back To Top End ====== -->
 
     <!-- ====== All Javascript Files ====== -->
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/main.js"></script>
     <script>
       // ==== for menu scroll
       const pageLink = document.querySelectorAll(".ud-menu-scroll");
