--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <h1>Products</h1>
-  <% products.map((product)=>{ %>
+  <h1>Product Detail</h1>
+
     <h4>
       <a href="/products/<%=product.id%>"><%=product.productTitle %></a>
     </h4>
@@ -17,7 +17,7 @@
       <%=product.productDescription %>
     </p>
     <p>ราคา : <%=product.productPrice %> บาท</p>
-    <%})%>
+
 </body>
 
 </html>
